opam-version: "2.0"
name: "opam-newest-ocaml"
version: "0.1.0"
synopsis: "Mend detection probe — newest OCaml 5.x compiler + newest stable deps"
maintainer: "mend-detection-qa"
authors: ["mend-detection-qa"]
license: "MIT"
homepage: "https://github.com/mend-detection-qa/opam-newest-ocaml"
bug-reports: "https://github.com/mend-detection-qa/opam-newest-ocaml/issues"
depends: [
  "ocaml" {>= "5.2"}
  "dune" {>= "3.23.1"}
  "eio" {>= "1.3"}
  "cmdliner" {>= "2.1.1"}
]
build: [
  ["echo" "no build step"]
]